styles.css
/* universal styles */
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,300;0,400;0,500;0,700;0,800;1,400;1,600;1,700;1,800&family=Kalam:wght@300;400;700&family=Raleway:ital,wght@0,400;0,500;0,600;1,200;1,400;1,500&display=swap');

body{
  margin: 0;
  font-family: 'Raleway', sans-serif;
  background-image: url("images/background_1.jpg");
  //background-color: rgb(66 74 67);
  background-position: center;
  color: #fff;
}
/* mobile responsivness */
header{
  background-image: url("images/header-bg.jpg");
  background-size: cover;
  height: 400px;
  top: 0;
  margin-top:-25px;
  border-bottom: 10px solid black;
}
.navigation{
  display: flex;
  flex-direction: column;
  align-items:center;
  position: fixed;
  z-index: 1;
  width: 100%;
  top:20px;

}
.navigation-mobile{
  display: flex;
  justify-content: space-between;
  align-items:center;
  background-color: #000;
  width: 100%;
  height: 65px;
  z-index: 5;
  border: 1px solid #fff;

}
.logotype{
  display: flex;
  color: #fff;
  align-items: center;
  font-weight: bolder;
  text-transform: uppercase;
}
#logo{
  width: 80px;
  border-radius: 50%;
  margin:0 10px;
}
#only-desktop{display: none;}
#mainNav{
  transform:translate(100vh);
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-around;
  font-size: 2.5rem;
  width: 100%;
  background-color: rgb(0 0 0 / 80%);
  top:0;
  transition: 3s;
}
nav a{
  text-decoration: none;
  color: #fff;
  padding-right: 20px;
}
#mainNav.nav-opened{
  transform:translateX(0);
  height: 70vh;
  transition: 0.7s;
  /*  */
}

/* toggle button taken example from "w3 schools" */
#menuToggler {
  display: inline-block;
  cursor: pointer;
  margin-right: 10px;

}
.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: rgb(234 208 23);
  margin: 6px 0;
  transition: 0.4s;
}
.open .bar1 {
  transform: rotate(-45deg) translate(-9px, 6px);
}
.open .bar2 {opacity: 0;}

.open .bar3 {
  transform: rotate(45deg) translate(-8px, -8px);
}
/*  end of toggle button */
#join-club{
  color: rgb(234 208 23);
}
header p{
  position: relative;
  color: #fff;
  font-weight: bolder;
  background-color: rgb(0 0 0 / 73%);
  text-align: center;
  top: 180px;
  padding: 20px;
}
header a{
  text-decoration: none;
  color: #fff;
  font-size: 1.5rem;
  //padding: 10px 0;
}

main{
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.events{
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 40px;
  align-items: center;
}
.headings{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.headings h2, .join-us h2{
  background-color: black;
  padding: 10px;
  margin: 0;
  width: 60%;
  border: 1px solid rgb(234 208 23);
}
.headings h3, .about-us h2{
  background-color: rgb(234 208 23);
  padding: 10px;
  margin: 0;
  color: #000;
  width: 40%;
  border: 1px solid #000;

}
.event-dates{
  margin-top: 30px;
  display: grid;
  grid-template: 1fr 1fr / 1fr;
  grid-gap: 1rem;
  justify-items: center;

}

.event-dates div{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  min-width: 330px;
  border: 1px solid black;
  margin-top: 20px;
}
.event-dates p{
  width: 100%;
  font-weight: bolder;
  background-color: black;
  margin: 0;
  border-bottom: 1px solid rgb(234 208 23);
  padding: 30px 0 ;
  text-align: center;
}

.event-dates img{
  max-width: 100%;
}
/*  about and join */

.about-join{
  margin-top: 60px;
  display: grid;
  grid-template: 1fr 1fr/ 1fr;

}
.about-us, .join-us{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.about-us h2, .join-us h2{
  width: 100%;
  text-align: center;
}

.about-us p{
  max-width: 500px;
  font-size: 1.5rem;
  text-align: center;
  background-color: rgb(0 0 0 / 47%);
  line-height: 1.8;
}
.joining-form{
  display: grid;
  margin: 80px 0;
  justify-items: center;
  align-content: center;
  background-color: rgb(0 0 0 / 77%);
  padding: 15px;
  border-radius: 20px;
  width: 70%;
}

label{
  font-size: 1.2rem;
  margin-bottom: 5px;
}

.joining-form input{
  width: 200px;
  height: 35px;
  border-radius: 10px;
  margin-bottom: 20px;
  background-color: rgb(0 0 0 / 58%);
  color: rgb(234 208 23);
  font-size: 1rem;
}

button{
  padding: 15px;
  border-radius: 30%;
  border: 1px solid black;
  background-color: rgb(234 208 23);
  font-family: inherit;
  font-weight: bolder;
  font-size: 1.4rem;
  margin: 10px;
}
button:hover{
  border: 1px solid rgb(234 208 23);
  background-color: black;
  color: white;

}
@media only screen and (min-width: 600px) {
  #menuToggler {
    display: none;
  }
  .navigation{
    flex-direction: row;
    background-color: #000;
    height: 65px;
    border: 1px solid #fff;
    border-left: 0;
    border-right: 0;
  }
  .navigation-mobile{
    border: none;
  }
  #mainNav{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;
    transform:translateY(0);
    background-color: #000;
  }

  #mainNav a{
    font-size: 1.4rem;
  }

  #join-club:hover{
    font-size: 1.8rem;
  }

  .event-dates div{
    max-width: 80%;
  }

  .about-us p{
    min-width: 350px;
    max-width: 500px;
  }
  .about-us h2, .join-us h2{
    width: 90%;
    text-align: center;
  }
}

@media only screen and (min-width: 800px) {
    header{
      height: 350px;
      background-position: center;
    }
    header p{
      top: 40%;
      text-align: right;
      background-color: rgb(0 0 0 / 0%);
      max-width: 40%;
      right: -50%;
      font-size: 1.5rem;
    }
    #only-desktop{display: contents;}
    .event-dates{
      margin-top: 30px;
      display: grid;
      grid-template: 1fr / 1fr 1fr ;
      grid-gap: 1rem;
      justify-items: center;
    }

    .about-join{
      grid-template: 1fr / 1fr 1fr;

    }
}

